Fix alignment when in a bootstrap form-horizontal element (#334)
Looks good to me.

--- a/src/sass/base/_bs.scss
+++ b/src/sass/base/_bs.scss
@@ -275,6 +275,7 @@ textarea.form-control {
 }
 
 .form-group {
+  margin-left: 0px;
   margin-bottom: 15px;
 }
 
